--- a/src/app/scoutcard/scoutcard.component.html
+++ b/src/app/scoutcard/scoutcard.component.html
@@ -53,10 +53,9 @@
   <div *ngIf="field.type!='email'">  
   <div class="table">     
   <div *ngIf="member.custom_data[card.group_id][field.column_id]!=''" class="table_row detailcard_left">{{field.label}}</div>
-  <div *ngIf="member.custom_data[card.group_id][field.column_id]!=''" class="table_row detailcard_right">{{ member.custom_data[card.group_id][field.column_id] }}
-  <span *ngIf="field.type=='telephone'"><br><a [attr.href]= "'tel:' + member.custom_data[card.group_id][field.column_id]" ><ons-icon icon="fa-phone" class="comm_button comm_div phone"></ons-icon></a></span>     
-  <span *ngIf="field.type=='telephone'"><a [attr.href]="sanitize('sms:+' + member.custom_data[card.group_id][field.column_id])" ><ons-icon icon="fa-comment-alt" class="comm_div comm_button sms"></ons-icon></a></span>
-  <span *ngIf="field.type=='telephone'"><a [attr.href]= "'https://wa.me/' + member.custom_data[card.group_id][field.column_id]" ><ons-icon icon="fa-whatsapp" class="comm_button wa comm_div"></ons-icon></a></span>
+  <div *ngIf="member.custom_data[card.group_id][field.column_id]!=''&&field.type!='telephone'" class="table_row detailcard_right">{{ member.custom_data[card.group_id][field.column_id] }}
+  </div>
+  <div *ngIf="member.custom_data[card.group_id][field.column_id]!=''&&field.type=='telephone'" (click)="callprompt(member.custom_data[card.group_id][field.column_id])" class="table_row detailcard_right">{{ member.custom_data[card.group_id][field.column_id] }}&nbsp;<ons-icon icon="fa-external-link-alt" class=""></ons-icon>
   </div>
   </div>
   </div>
