--- a/src/app/scoutcard/scoutcard.component.html
+++ b/src/app/scoutcard/scoutcard.component.html
@@ -63,7 +63,7 @@
   <div class="table"> 
   <div *ngIf="member.custom_data[card.group_id][field.column_id]!=''" class="table_row detailcard_left"><!--<ons-icon icon="fa-envelope" class="comm_button email"></ons-icon>--><a [attr.href]= "'mailto:' + member.custom_data[card.group_id][field.column_id]" >{{field.label}}</a></div>
   <!--<div class="table_row detailcard_right"><ons-icon icon="fa-envelope" class="comm_button email"></ons-icon></div>-->
-  <div class="table_row100"><a [attr.href]= "'mailto:' + member.custom_data[card.group_id][field.column_id]" >{{ member.custom_data[card.group_id][field.column_id] }}</a></div>
+  <div class="table_row100"><a [attr.href]= "'mailto:' + member.custom_data[card.group_id][field.column_id]" >{{ member.custom_data[card.group_id][field.column_id] }}<ons-icon icon="fa-external-link-alt" class=""></ons-icon></a></div>
   </div>
   </div>
   </span>
