--- a/src/app/globalsearch/globalsearch.component.html
+++ b/src/app/globalsearch/globalsearch.component.html
@@ -20,13 +20,14 @@
            <ons-search-input id="text" placeholder="Type here" [(value)]="namefilter" (keyup)="update_search($event)" style="width:100%" ></ons-search-input>
       <div *ngIf="globals.secret!=''">    
       <h2>Global Search</h2>
-      <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
+      <!--<p style="text-align: center; opacity: 0.6; padding-top: 20px;">
         {{globals.mysection}}
         {{globals.current_term}}
         {{globals.config[2][globals.mysection][globals.current_term].name}}
         
       </p>
-    
+    -->
+    <div *ngIf="1==0"><!--Grid-->
     <div  id="gridcontainer" *ngFor="let member of members; index as i"> 
     <!--<div *ngIf="((i==0)||(member.patrol!=members[i-1].patrol))" class="patrolheader">
     <span *ngIf="member.patrol==''">No Patrol</span>  
@@ -55,6 +56,11 @@
     </div>
 
     </div>  
+    </div> <!--Grid-->
+<div *ngIf="1==1"> <!--List-->
+  <div  id="gridcontainer" *ngFor="let member of members; index as i">
+  </div>
+</div>>  <!--List-->
       </div>
     </div>
     </ons-page>
