--- a/src/app/globalsearch/globalsearch.component.html
+++ b/src/app/globalsearch/globalsearch.component.html
@@ -58,8 +58,30 @@
     </div>  
     </div> <!--Grid-->
 <div *ngIf="1==1"> <!--List-->
-  <div  id="gridcontainer" *ngFor="let member of members; index as i">
-  </div>
+  <ons-list>
+  <span  id="gridcontainer" *ngFor="let member of members; index as i">
+<ons-list-item (click)="push($event, member,i)" id="{{member.member_id}}">
+      
+        <span class="left">
+        <div class="member_box" *ngIf="null!=member.photo_guid">  
+     
+      <span class="notification" *ngIf="section_has_roles()==true">{{globals.patrolroles[globals.config[0][globals.mysection].section_type][member.patrol_role_level]}}</span> 
+      <div class="list-item__thumbnail"  >    
+    <img  src="{{get_photo_url(member)}}"  class="member_photo2" >
+    </div>
+    </div>
+    <div class="member_box" *ngIf="null==member.photo_guid">
+         <!-- <span class="notification" *ngIf="section_has_roles()==true">{{globals.patrolroles[globals.config[0][globals.mysection].section_type][member.patrol_role_level]}}</span> -->
+    <div class="member_initial member_initial2"  >{{member.first_name.substring(0,1)}}<span *ngIf="no_matches(member.first_name)!=1">{{member.last_name.substring(0,1)}}</span>
+     </div> 
+    </div>
+              
+        </span>
+        <span class="list-item__title">{{member.first_name}} {{member.last_name}}</span>
+        <span class="list-item__subtitle"></span>
+</ons-list-item>
+  </span>
+  </ons-list>
 </div>>  <!--List-->
       </div>
     </div>
