--- a/src/app/globalsearch/globalsearch.component.html
+++ b/src/app/globalsearch/globalsearch.component.html
@@ -4,8 +4,12 @@
         {{globals.application}}
       </div>
       <div class="right">
+        <ons-toolbar-button (click)="grid_list_toggle()">
+          <ons-icon icon="fa-th" *ngIf="grid_list==1"></ons-icon>
+          <ons-icon icon="fa-list" *ngIf="grid_list==0"></ons-icon>
+        </ons-toolbar-button>
         <ons-toolbar-button (click)="openMenu()">
-          <ons-icon icon="md-menu"></ons-icon>
+          <ons-icon icon="fa-bars"></ons-icon>
         </ons-toolbar-button>
       </div>
     </ons-toolbar>
@@ -27,7 +31,7 @@
         
       </p>
     -->
-    <div *ngIf="1==0"><!--Grid-->
+    <div *ngIf="grid_list==0"><!--Grid-->
     <div  id="gridcontainer" *ngFor="let member of members; index as i"> 
     <!--<div *ngIf="((i==0)||(member.patrol!=members[i-1].patrol))" class="patrolheader">
     <span *ngIf="member.patrol==''">No Patrol</span>  
@@ -57,10 +61,10 @@
 
     </div>  
     </div> <!--Grid-->
-<div *ngIf="1==1"> <!--List-->
+<div *ngIf="grid_list==1"> <!--List-->
   <ons-list>
   <span  id="gridcontainer" *ngFor="let member of members; index as i">
-<ons-list-item (click)="push($event, member,i)" id="{{member.member_id}}">
+<ons-list-item (click)="go($event,member);" id="{{member.member_id}}" modifier="chevron">
       
         <span class="left">
         <div class="member_box" *ngIf="null!=member.photo_guid">  
@@ -78,7 +82,7 @@
               
         </span>
         <span class="list-item__title">{{member.first_name}} {{member.last_name}}</span>
-        <span class="list-item__subtitle"></span>
+        <span class="list-item__subtitle">{{member.patrol_role_level_label}}{{member.patrol}}</span>
 </ons-list-item>
   </span>
   </ons-list>
