--- a/src/app/globalsearch/globalsearch.component.html
+++ b/src/app/globalsearch/globalsearch.component.html
@@ -69,7 +69,7 @@
         <span class="left">
         <div class="member_box" *ngIf="null!=member.photo_guid">  
      
-      <span class="notification" *ngIf="section_has_roles()==true">{{globals.patrolroles[globals.config[0][globals.mysection].section_type][member.patrol_role_level]}}</span> 
+      <!--<span class="notification" *ngIf="section_has_roles()==true">{{globals.patrolroles[globals.config[0][globals.mysection].section_type][member.patrol_role_level]}}</span> -->
       <div class="list-item__thumbnail"  >    
     <img  src="{{get_photo_url(member)}}" class="list-item__thumbnail"  >
     </div>
@@ -82,7 +82,7 @@
               
         </span>
         <span class="list-item__title">{{member.first_name}} {{member.last_name}}</span>
-        <span class="list-item__subtitle">{{member.patrol_role_level_label}}{{member.patrol}}</span>
+        <span class="list-item__subtitle">{{member.patrol_role_level_label}}<span *ngIf="member.patrol_role_level_label!=''">, </span>{{member.patrol}}</span>
 </ons-list-item>
   </span>
   </ons-list>
