--- a/src/app/globalsearch/globalsearch.component.css
+++ b/src/app/globalsearch/globalsearch.component.css
@@ -13,7 +13,7 @@
 width: 45px !important;
   height: 45px !important;
   font-size:20px;
-  
+  background-color: #7413dc;
 }
 
 .member_outer.selected .member_inner .member_initial {
