--- a/src/app/sectionselect/sectionselect.component.html
+++ b/src/app/sectionselect/sectionselect.component.html
@@ -9,7 +9,7 @@
       </div>
     </ons-toolbar>
     <!---->
- <ons-fab position="right bottom" (click)="select_section()">
+ <ons-fab style="background-color: #7413dc" position="right bottom" (click)="select_section()">
         <ons-icon icon="md-check"></ons-icon>
       </ons-fab>     
 <div class="content">
