--- a/src/app/medicalsummary/medicalsummary.component.css
+++ b/src/app/medicalsummary/medicalsummary.component.css
@@ -1,6 +1,6 @@
 .member_photo {width:50px; height:  50px ; border-radius: 25px;}
 .name {float: left; width: 75%}
-.photo {float: left; width: 25%}
+.photo {float: left; width: 60px;}
 .detail_stuff {clear: left; width: 100%; }
 .member_name {    color: #7413dc;
     font-weight: bolder;}    
