--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -18,7 +18,9 @@
 
         <div class="content">
       <div *ngIf="globals.secret!=''">    
-      <h2>Settings</h2>
+      <h2>Welcome</h2>
+       <div class="member_box"><div class="member_initial"><ons-icon icon="fa-ambulance"></ons-icon></div><div class="member_name">Health Info</div></div>
+      <div class="member_initial"><ons-icon icon="fa-search"></ons-icon></div>
       <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
         {{globals.mysection}}
         {{globals.current_term}}
