--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -19,8 +19,54 @@
         <div class="content">
       <div *ngIf="globals.secret!=''">    
       <h2>Welcome</h2>
-       <div class="member_box"><div class="member_initial"><ons-icon icon="fa-ambulance"></ons-icon></div><div class="member_name">Health Info</div></div>
-      <div class="member_initial"><ons-icon icon="fa-search"></ons-icon></div>
+        <div class="member_outer">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-ambulance"></ons-icon></div></div>
+          <div class="member_name">Health</div>
+         </div> 
+      </div>
+      <div class="member_outer">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-search"></ons-icon></div></div>
+          <div class="member_name">Global</div>
+         </div> 
+      </div>
+      <div class="member_outer">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-birthday-cake"></ons-icon></div></div>
+          <div class="member_name">Birthdays</div>
+         </div> 
+      </div>
+      <div class="member_outer">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-user-check"></ons-icon></div></div>
+          <div class="member_name">Register</div>
+         </div> 
+      </div>
+      <div class="member_outer">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-cubes"></ons-icon></div></div>
+          <div class="member_name">Events</div>
+         </div> 
+      </div>
+      <div class="member_outer">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-calendar-day"></ons-icon></div></div>
+          <div class="member_name">Programme</div>
+         </div> 
+      </div>
+      <div class="member_outer">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-exchange-alt"></ons-icon></div></div>
+          <div class="member_name">Section</div>
+         </div> 
+      </div>
+      <div class="member_outer">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-calendar-alt"></ons-icon></div></div>
+          <div class="member_name">Terms</div>
+         </div> 
+      </div>
       <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
         {{globals.mysection}}
         {{globals.current_term}}
