--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -61,7 +61,7 @@
           <div class="member_name">Section</div>
          </div> 
       </div>
-      <div class="member_outer" (click)="load_page(termselect)">
+      <div class="member_outer" (click)="loadPage(termselect)">
            <div class="member_inner">
           <div class="member_box"><div class="member_initial"><ons-icon icon="fa-calendar-alt"></ons-icon></div></div>
           <div class="member_name">Terms</div>
