--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -26,7 +26,7 @@
       </p>
       <p>
       
-        {{globls.sectionname}}
+        {{globals.sectionname}}
         
       </p>
         <div class="member_outer">
