--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -29,7 +29,7 @@
         {{globals.sectionname}}
         
       </p>
-        <div class="member_outer">
+        <div class="member_outer" (click)="loadPage(medical)">
            <div class="member_inner">
           <div class="member_box"><div class="member_initial"><ons-icon icon="fa-ambulance"></ons-icon></div></div>
           <div class="member_name">Health</div>
