--- a/src/app/medical/medical.component.html
+++ b/src/app/medical/medical.component.html
@@ -3,6 +3,9 @@
 		<div class="center">
 			{{globals.application}}
 		</div>
+    <div class="left">
+		<ons-back-button>Back</ons-back-button>
+	</div>
 		<div class="right">
 
 			<ons-toolbar-button (click)="sortDialog.show()">
