--- a/src/app/medical/medical.component.html
+++ b/src/app/medical/medical.component.html
@@ -18,19 +18,19 @@
 		</div>
 	</ons-toolbar>
 	<ons-speed-dial position="bottom right" direction="up">
-		<ons-fab  style="background-color: #7413dc">
+		<ons-fab  style="background-color: #7413dc; color: white;">
 			<ons-icon icon="md-eye"></ons-icon>
 		</ons-fab>
-		<ons-speed-dial-item (click)="summary(1)" style="background-color: #00a794;">
+		<ons-speed-dial-item (click)="summary(1)" style="background-color: #00a794; color: white;">
 			<ons-icon icon="fa-file-medical"></ons-icon>
 		</ons-speed-dial-item>
-		<ons-speed-dial-item (click)="summary(2)" style="background-color: #00a794;">
+		<ons-speed-dial-item (click)="summary(2)" style="background-color: #00a794;  color: white;">
 			<ons-icon icon="fa-allergies"></ons-icon>
 		</ons-speed-dial-item>
-		<ons-speed-dial-item (click)="summary(3)" style="background-color: #00a794;">
+		<ons-speed-dial-item (click)="summary(3)" style="background-color: #00a794; color: white;">
 			<ons-icon icon="fa-utensils"></ons-icon>
 		</ons-speed-dial-item>
-		<ons-speed-dial-item (click)="summary(4)" style="background-color: #00a794;">
+		<ons-speed-dial-item (click)="summary(4)" style="background-color: #00a794; color: white;">
 			<ons-icon icon="fa-info-circle"></ons-icon>
 		</ons-speed-dial-item>
 	</ons-speed-dial>
