--- a/src/app/termpicker/termpicker.component.html
+++ b/src/app/termpicker/termpicker.component.html
@@ -11,17 +11,20 @@
 		</ons-toolbar-button>
 	</div>
 </ons-toolbar>
+<ons-fab style="background-color: #7413dc; color:white;" position="right bottom" (click)="select_term()">
+        <ons-icon icon="md-check"></ons-icon>
+      </ons-fab>
 
 <div class="content">
 	<ons-list-title  *ngIf="section">Select a Term</ons-list-title>
 
 
       <ons-list>
-        <ons-list-item (click)="push($event, sections)" *ngFor="let sections of section[2][globals.mysection]">
+        <ons-list-item (click)="push($event, sections, i)" *ngFor="let sections of section[2][globals.mysection];index as i">
        <span class="left" >
-        <ons-icon *ngIf="localterm==sections.termid" icon="fa-check-circle" size="50px" style="color: #00a794;" class="list-item__icon">
+        <ons-icon *ngIf="localterm==i" icon="fa-check-circle" size="50px" style="color: #00a794;" class="list-item__icon">
         </ons-icon>
-        <ons-icon *ngIf="localterm!=sections.termid" icon="fa-circle" size="50px" style="color: LightGray;" class="list-item__icon">
+        <ons-icon *ngIf="localterm!=i" icon="fa-circle" size="50px" style="color: LightGray;" class="list-item__icon">
         </ons-icon>
                 
         </span>
