--- a/src/app/sectionselect/sectionselect.component.html
+++ b/src/app/sectionselect/sectionselect.component.html
@@ -2,6 +2,9 @@
       <div class="center">
         {{globals.application}}
       </div>
+       <div class="left">
+		<ons-back-button>Back</ons-back-button>
+	</div>
       <div class="right">
         <ons-toolbar-button (click)="openMenu()">
           <ons-icon icon="md-menu"></ons-icon>
