--- a/src/app/medical/medical.component.html
+++ b/src/app/medical/medical.component.html
@@ -13,7 +13,7 @@
 			</ons-toolbar-button>
 
 			<ons-toolbar-button (click)="openMenu()">
-				<ons-icon icon="md-menu"></ons-icon>
+				<ons-icon icon="fa-bars"></ons-icon>
 			</ons-toolbar-button>
 		</div>
 	</ons-toolbar>
@@ -50,8 +50,12 @@
         <ons-list-item (click)="push($event, member,i)"*ngIf="true==filterdisplay[i]">
       
         <span class="left" >
-        
-        <ons-icon  icon="fa-user-circle" class="list-item__icon" style="color: LightGray;" *ngIf="null==member.photo_guid"></ons-icon>
+        <div class="list-item__thumbnail" *ngIf="null==member.photo_guid">
+
+    <div class="member_initial member_initial2"  >{{member.first_name.substring(0,1)}}<span *ngIf="no_matches(member.first_name)!=1">{{member.last_name.substring(0,1)}}</span>
+     </div> 
+    </div>
+       <!-- <ons-icon  icon="fa-user-circle" class="list-item__icon" style="color: LightGray;" *ngIf="null==member.photo_guid"></ons-icon>-->
         <img class="list-item__thumbnail" src="{{get_photo_url(member)}}" *ngIf="null!=member.photo_guid">        
         </span>
         <span class="right" >
