--- a/src/app/sectionselect/sectionselect.component.html
+++ b/src/app/sectionselect/sectionselect.component.html
@@ -12,7 +12,7 @@
       </div>
     </ons-toolbar>
     <!---->
- <ons-fab style="background-color: #7413dc; color:white;" position="right bottom" (click)="select_section()">
+ <ons-fab  position="right bottom" (click)="select_section()">
         <ons-icon icon="md-check"></ons-icon>
       </ons-fab>     
 <div class="content">
