--- a/src/app/medical/medical.component.css
+++ b/src/app/medical/medical.component.css
@@ -45,3 +45,5 @@ width: 40px !important;
   font-size:20px;
   background-color: #7413dc;
 }
+:checked+.segment__button {  background-color: yellow !important}
+.segmed { margin-left: 2px}
