--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* Add application styles & imports to this file! */
+/* Add application setyles & imports to this file! */
+:checked+.segment__button {  background-color: #00a794; color: white !important}
+button.fab, button.fab:active, ons-fab.fab:active, ons-fab.fab { background-color:  #7413dc; color: white !important }
+ons-speed-dial-item.fab:active { background-color:  rgb(0, 167, 148); color: white !important}
+.segment__button { color: black}
+.segment__button { border-color: black}
