--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -43,7 +43,7 @@
           <div class="member_name">Birthdays</div>
          </div> 
       </div>
-      <div class="member_outer">
+      <div class="member_outer" (click)="loadPage(register)">
            <div class="member_inner">
           <div class="member_box"><div class="member_initial"><ons-icon icon="fa-user-check"></ons-icon></div></div>
           <div class="member_name">Register</div>
