--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,30 +1,28 @@
 <ons-page>
-<ons-toolbar>
-      <div class="center">
-        {{globals.application}}
-      </div>
-      <div class="right">
-        <ons-toolbar-button (click)="openMenu()">
-          <ons-icon icon="md-menu"></ons-icon>
-        </ons-toolbar-button>
-      </div>
-    </ons-toolbar>
-    <ons-bottom-toolbar>
-      <div class="left bottom-bar">
-  <ons-icon icon="fa-users">&nbsp;</ons-icon><b>{{counter}}</b>/{{members.length}} {{lastclick}}
+	<ons-toolbar>
+		<div class="center">
+			{{globals.application}}
+		</div>
+		<div class="left">
+			<ons-back-button>Back</ons-back-button>
+		</div>
+		<div class="right">
+			<ons-toolbar-button (click)="openMenu()">
+				<ons-icon icon="md-menu"></ons-icon>
+			</ons-toolbar-button>
+		</div>
+	</ons-toolbar>
+	<ons-bottom-toolbar>
+		<div class="left bottom-bar">
+			<ons-icon icon="fa-users">&nbsp;</ons-icon><b>{{counter}}</b>/{{members.length}} {{lastclick}}
  <ons-toolbar-button>Add</ons-toolbar-button> </div>
   <div class="right"></div>
 </ons-bottom-toolbar>
 
         <div class="content">
       <div *ngIf="globals.secret!=''">    
-      <h2>Settings</h2>
-      <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
-        {{globals.mysection}}
-        {{globals.current_term}}
-        {{globals.config[2][globals.mysection][globals.current_term].name}}
-        
-      </p>
+      <h2>Register</h2>
+      
     
     <div  id="gridcontainer" *ngFor="let member of members; index as i"> 
     <div *ngIf="((i==0)||(member.patrol!=members[i-1].patrol))" class="patrolheader">
@@ -61,12 +59,3 @@
       </div>
     </div>
     </ons-page>
-   <!--<ons-tabbar position="auto" modifier="autogrow white-content" swipeable #tabbar>
-  <div class="tabbar__content"></div>
-  <div class="tabbar">
-     <ons-tab label="Register" icon="md-account-add" ></ons-tab>
-     <ons-tab label="Inspect" icon="md-search" ></ons-tab>
-     <ons-tab label="Add Points" icon="md-plus-circle"  active></ons-tab>
-    <ons-tab label="Stats" icon="md-view-dashboard" ></ons-tab>
-  </div>
-</ons-tabbar>-->
