--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,10 +10,7 @@
       </div>
     </ons-toolbar>
     <ons-bottom-toolbar>
-      <div class="left bottom-bar">
-  <ons-icon icon="fa-users">&nbsp;</ons-icon><b>{{counter}}</b>/{{members.length}} {{lastclick}}
- <ons-toolbar-button>Add</ons-toolbar-button> </div>
-  <div class="right"></div>
+      Version&nbsp;{{globals.version}}
 </ons-bottom-toolbar>
 
         <div class="content">
