Build out Events

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
 						Birthdays
 					</div>
 				</ons-list-item>
-        <ons-list-item (click)="loadPage(birthday)" tappable  *ngIf="globals.event.length>0&&globals.eventA.length>0">
+        <ons-list-item (click)="loadPage(events)" tappable  *ngIf="globals.event.length>0&&globals.eventA.length>0">
 					<div class="left">
 						<ons-icon icon="fa-cube" class="list-item__icon"></ons-icon>
 					</div>
