--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -32,7 +32,7 @@
               
         </span>
         <span class="list-item__title">{{event.name}} </span>
-        <span class="list-item__subtitle">{{event.startdate}} {{event.enddate}}</span>
+        <span class="list-item__subtitle">{{eventdates(event.startdate,event.enddate)}}</span>
 </ons-list-item>
   </span>
   </ons-list>
