--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -7,10 +7,7 @@
 		<ons-back-button>Back</ons-back-button>
 	</div>
       <div class="right">
-        <ons-toolbar-button (click)="grid_list_toggle()">
-          <ons-icon style="color: 7413dc;" icon="fa-th" *ngIf="grid_list==1"></ons-icon>
-          <ons-icon style="color: 7413dc;" icon="fa-th-list" *ngIf="grid_list==0"></ons-icon>
-        </ons-toolbar-button>
+        
         <ons-toolbar-button (click)="openMenu()">
           <ons-icon icon="fa-bars"></ons-icon>
         </ons-toolbar-button>
@@ -24,7 +21,7 @@
     
 
   <ons-list>
-  <span  id="gridcontainer" *ngFor="let event of globals.event; index as i">
+  <span  id="gridcontainer" *ngFor="let event of globals.eventA; index as i">
 <ons-list-item (click)="go($event,member);" modifier="chevron">
       
         <span class="left">
@@ -33,6 +30,9 @@
         </span>
         <span class="list-item__title">{{event.name}} </span>
         <span class="list-item__subtitle">{{eventdates(event.startdate,event.enddate)}}</span>
+        <span class="right" >
+          <span class="notification {{event_class(event.eventid)}}">{{event_option(event.eventid,"Yes")}}<span *ngIf="event_limit(event.eventid)>0">/{{event.attendancelimit}}</span></span>
+        </span>
 </ons-list-item>
   </span>
   </ons-list>
