--- a/src/app/scoutcard/scoutcard.component.html
+++ b/src/app/scoutcard/scoutcard.component.html
@@ -14,6 +14,11 @@
 </ons-toolbar>
 
 <div class="content">
+  <ons-tabbar>
+  <ons-tab label="Tab 1" active></ons-tab>
+  <ons-tab label="Tab 2"></ons-tab>
+</ons-tabbar>
+
 	<ons-card>
 		<div class="header_block">
 			<div class="member_header" *ngIf="null!=member.photo_guid">
@@ -71,4 +76,14 @@
     
   </ons-card>  
   </div>
+  <ons-card>
+    <p class="card_title">Events</p>
+    <ons-list-item expandable>
+      Events List
+      <div class="expandable-content" > 
+      <ons-list-item *ngFor="let ev of events_list ; index as z">{{ev.name}}<span class="right">{{ev.attending}}</span></ons-list-item>
+      
+      </div>
+    </ons-list-item>
+  </ons-card>  
 </div> 
