--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,7 @@ button.fab, button.fab:active, ons-fab.fab:active, ons-fab.fab { background-colo
 ons-speed-dial-item.fab:active { background-color:  rgb(0, 167, 148); color: white !important}
 .segment__button { color: black}
 .segment__button { border-color: black}
+span.notification.blue { background: #7413dc}
+span.notification.red { background:  #e22e12;}
+span.notification.amber { background: #ffe627;}
+span.notification.green { background: #23a950;}
