Tab bar implementation for ScoutCard Component

--- a/src/app/scoutcard/eventtab/eventtab.component.html
+++ b/src/app/scoutcard/eventtab/eventtab.component.html
@@ -1,3 +1,14 @@
+<ons-card>
+		<div class="header_block">
+			<div class="member_header" *ngIf="null!=member.photo_guid">
+				<img *ngIf="null!=member.photo_guid" src={{member_image}} alt="{{cardTitle}}" class="member_photo">
+      </div>    
+        <div class="title member_name" *ngIf="null!=member.photo_guid">{{member.first_name}}<br>{{member.last_name}}</div>
+        <div class="title member_name" *ngIf="null==member.photo_guid">{{member.first_name}} {{member.last_name}}</div>
+    </div>
+  
+	</ons-card>
+
  <ons-card>
     <p class="card_title">Events</p>
     <ons-list-item expandable>
