--- a/src/app/scoutcard/scoutcard.component.html
+++ b/src/app/scoutcard/scoutcard.component.html
@@ -14,9 +14,9 @@
 </ons-toolbar>
 
 <div class="content">
-  <ons-tabbar>
-  <ons-tab label="Tab 1" active></ons-tab>
-  <ons-tab label="Tab 2"></ons-tab>
+  <ons-tabbar swipeable>
+  <ons-tab label="Details" icon="fa-user-tag" active [page]="persontab"></ons-tab>
+  <ons-tab label="Events" icon="fa-clipboard-list" [page]="eventtab"></ons-tab>
 </ons-tabbar>
 
   
