--- a/src/app/medicalcard/medicalcard.component.css
+++ b/src/app/medicalcard/medicalcard.component.css
@@ -7,4 +7,4 @@ p.allergy{ font-weight: bold; clear:left;}
      width: 100px; float: left;}
 .member_name {    color: #7413dc;
     font-weight: bolder; width: 75%; font-size: 20pt; }    
-.header_block {height: 100%; overflow: auto;}
+.header_block {overflow: auto;}
