Event List Layout

--- a/src/app/scoutcard/eventtab/eventtab.component.html
+++ b/src/app/scoutcard/eventtab/eventtab.component.html
@@ -11,20 +11,22 @@
 
  <ons-card>
     <p class="card_title">Events</p>
-    
-      <ons-list-item *ngFor="let ev of events_list ; index as z">
-      <div class="left" *ngIf="ev.attending=='Yes'">
-        <ons-icon  class="list-item__icon" icon="fa-check-circle" style="color:  #23a950"></ons-icon>
-      </div>
-      <div class="left" class="list-item__icon"  *ngIf="ev.attending=='No'">
-        <ons-icon icon="fa-times-circle" style="color: #e22e12"></ons-icon>
-      </div>
-      <div class="left" *ngIf="ev.attending!='Yes'&&ev.attending!='No'">
-        <ons-icon class="list-item__icon" icon="fa-question-circle" style="color:  #003982"></ons-icon>
+    <div *ngFor="let ev of events_list ; index as z">
+      <ons-list-item >
+      
+      
+      
+      
+      <div class="left list-item__icon"> 
+       
+     
+        <ons-icon class="list-item__icon" icon="fa-times-circle" style="color: #e22e12" *ngIf="(ev.attending == 'No')"></ons-icon>
+      <ons-icon  class="list-item__icon" icon="fa-check-circle" style="color:  #23a950" *ngIf="ev.attending === 'Yes'"></ons-icon>
+      <ons-icon class="list-item__icon" icon="fa-question-circle" style="color:  #003982" *ngIf="ev.attending!='Yes'&&ev.attending!='No'"></ons-icon>
       </div>
       
-      <span>{{ev.name}}</span>
+      <div class="center">{{ev.name}}</div>
             </ons-list-item>
-      
+      </div>
       
   </ons-card>
