Update to use font awesome menu picker

--- a/src/app/sectionselect/sectionselect.component.html
+++ b/src/app/sectionselect/sectionselect.component.html
@@ -7,7 +7,7 @@
 	</div>
       <div class="right">
         <ons-toolbar-button (click)="openMenu()">
-          <ons-icon icon="md-menu"></ons-icon>
+          <ons-icon icon="fa-bars"></ons-icon>
         </ons-toolbar-button>
       </div>
     </ons-toolbar>
