--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="right">
 		<ons-toolbar-button (click)="openMenu()">
-			<ons-icon icon="md-menu"></ons-icon>
+			<ons-icon icon="fa-bars"></ons-icon>
 		</ons-toolbar-button>
 	</div>
 </ons-toolbar>
