--- a/src/app/lastchecked/lastchecked.component.html
+++ b/src/app/lastchecked/lastchecked.component.html
@@ -21,8 +21,8 @@
 
 	<div class="content">
 		
-      <ons-list><span  *ngFor="let member of members; index as i" >
-        <ons-list-item (click)="push($event, member,i)"*ngIf="true==filterdisplay[i]">
+      <ons-list><span  *ngFor="let member of membersdates; index as i" >
+        <ons-list-item (click)="push($event, member,i)">
       
         <span class="left" >
         <div class="list-item__thumbnail" *ngIf="null==member.photo_guid">
@@ -34,9 +34,9 @@
         <img class="list-item__thumbnail" src="{{get_photo_url(member)}}" *ngIf="null!=member.photo_guid">        
         </span>
         <span class="right" >
-          01/01/2019
+          {{member.date}}
         </span>  
-        <span class="list-item__title">{{member.first_name}} {{member.last_name}}</span>
+        <span class="list-item__title">{{member.name}}</span>
         <span class="list-item__subtitle"></span>
       
         </ons-list-item>
