--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -46,6 +46,12 @@
           <div class="member_name">Register</div>
          </div> 
       </div>
+      <div class="member_outer" (click)="loadPage(lastcheck)">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-user-check"></ons-icon></div></div>
+          <div class="member_name">Last Check</div>
+         </div> 
+      </div>
       <div class="member_outer" (click)="loadPage(events)" *ngIf="globals.event.length>0&&globals.eventA.length>0">
            <div class="member_inner">
           <div class="member_box"><div class="member_initial"><ons-icon icon="fa-cube"></ons-icon></div></div>
