--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -42,7 +42,7 @@
       </div>
       <div class="member_outer" (click)="loadPage(register)">
            <div class="member_inner">
-          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-user-check"></ons-icon></div></div>
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-user-clock"></ons-icon></div></div>
           <div class="member_name">Register</div>
          </div> 
       </div>
