Last Update Header

--- a/src/app/lastchecked/lastchecked.component.html
+++ b/src/app/lastchecked/lastchecked.component.html
@@ -20,7 +20,7 @@
 	
 
 	<div class="content">
-		
+		<h2>Last Update</h2>
       <ons-list><span  *ngFor="let member of membersdates; index as i" >
         <ons-list-item (click)="push($event, member,i)">
       
