Add exit prompt and filter to Last Update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div (window:beforeunload)="doSomething()"></div>
 <ons-splitter>
 	<!--[attr.collapse]="'collapse'"-->
 	<ons-splitter-side #menu side="right" width="220px" [attr.collapse]="'(max-width: 600px)'" [attr.swipeable]="'swipeable'">
