--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,4 @@ span.notification.blue { background: #7413dc}
 span.notification.red { background:  #e22e12;}
 span.notification.amber { background: #ffe627; color: black}
 span.notification.green { background: #23a950;}
+h2 {text-align: center;}
