--- a/src/app/lastchecked/lastchecked.component.html
+++ b/src/app/lastchecked/lastchecked.component.html
@@ -20,9 +20,10 @@
 	
 
 	<div class="content">
+    <ons-search-input id="text" placeholder="Type here" [(value)]="namefilter" (keyup)="update_search($event,-1)" style="width:100%" ></ons-search-input>
 		<h2>Last Update</h2>
       <ons-list><span  *ngFor="let member of membersdates; index as i" >
-        <ons-list-item (click)="push($event, member,i)">
+        <ons-list-item (click)="push($event, member,i)" *ngIf="true==filterdisplay[i]">
       
         <span class="left" >
         <div class="list-item__thumbnail" *ngIf="null==member.photo_guid">
