General Corrections and Styling

--- a/src/app/globalsearch/globalsearch.component.html
+++ b/src/app/globalsearch/globalsearch.component.html
@@ -24,7 +24,7 @@
 </ons-bottom-toolbar>
 -->
         <div class="content">
-           <ons-search-input id="text" placeholder="Type here" [(value)]="namefilter" (keyup)="update_search($event)" style="width:100%" ></ons-search-input>
+           <ons-search-input id="text" placeholder="Global Search " [(value)]="namefilter" (keyup)="update_search($event)" style="width:100%" ></ons-search-input>
       <div *ngIf="globals.secret!=''">    
       <h2>Global Search</h2>
       <!--<p style="text-align: center; opacity: 0.6; padding-top: 20px;">
