--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,9 +12,9 @@
 	<h2>Logon</h2>
 	<div style="text-align: center">
 		<br>
-        <ons-button (click)="push()">
+       <!-- <ons-button (click)="push()">
           Push Page
-        </ons-button>
+        </ons-button> -->
   </div>
   <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
         Swipe left to open the menu!
