Event Details Tabs

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -22,7 +22,7 @@
 
   <ons-list>
   <span  id="gridcontainer" *ngFor="let event of globals.eventA; index as i">
-<ons-list-item (click)="go($event,member);" modifier="chevron">
+<ons-list-item (click)="go($event,event);" modifier="chevron">
       
         <span class="left">
         
