Add delay modal on logon

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,3 +41,9 @@
     <p>Version&nbsp;{{globals.version}}</p>
     
     </div>
+    <ons-modal  id="modal">
+    
+      <ons-icon icon="fa-spinner" spin="true" size="80px"></ons-icon>
+    
+    <p>Logging you on & getting your data</p>
+  </ons-modal>
