Event Dates presentation

--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -1,5 +1,6 @@
 <ons-card>
-  {{eventA.name}}  
+  {{eventA.name}}
+  {{eventdates(event.startdate,event.enddate)}}  
 </ons-card>     
   <ons-card>
     <p class="card_title">Attendance</p>
