--- a/src/app/eventcard/summarytab/summarytab.component.html
+++ b/src/app/eventcard/summarytab/summarytab.component.html
@@ -1,5 +1,6 @@
 <ons-card>
   {{eventA.name}}  
+  {{eventdates(event.startdate,event.enddate)}}
 </ons-card>     
   <ons-card>
   {{eventA.enddate}}
