Corrections to Date formatting

--- a/src/app/eventcard/summarytab/summarytab.component.html
+++ b/src/app/eventcard/summarytab/summarytab.component.html
@@ -1,6 +1,6 @@
 <ons-card>
-  {{eventA.name}}  
-  {{eventdates(event.startdate,event.enddate)}}
+   <span class="head">{{eventA.name}}</span><br>  
+  <span class="subhead">{{eventdates(eventA.startdate,eventA.enddate)}}</span>
 </ons-card>     
   <ons-card>
   {{eventA.enddate}}
