--- a/src/app/eventcard/summarytab/summarytab.component.html
+++ b/src/app/eventcard/summarytab/summarytab.component.html
@@ -3,5 +3,8 @@
   <span class="subhead">{{eventdates(eventA.startdate,eventA.enddate)}}</span>
 </ons-card>     
   <ons-card>
-  {{eventA.enddate}}
-  </ons-card>  
+    <div [innerHTML]="eventA.publicnotes"></div>
+  </ons-card>
+  <ons-card>
+   
+  </ons-card>    
